# jibe/src/config/swagger.json
@@ -182,6 +182,62 @@
                 },
                 "deprecated": false
             }
+        },
+        "/events": {
+            "get": {
+                "tags": [
+                    "events"
+                ],
+                "operationId": "event_list",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/EventInfo"
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            },
+            "post": {
+                "tags": [
+                    "events"
+                ],
+                "operationId": "event_upsert",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "Payload",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/EventInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/EventInfo"
+                        }
+                    }
+                },
+                "deprecated": false
+            }
         }
     },
     "definitions": {
@@ -216,6 +272,17 @@
                 },
                 "webhook": {
                     "type": "string"
+                }
+            }
+        },
+        "EventInfo": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "object"
                 }
             }
         },
